Implement agent registration feature
- Add agent registration DTOs and service
- Create master agent management service
- Implement REST endpoint for registration
- Add EventListener for agent startup registration
- Configure profile-based database selection
- Add programmatic datasource configuration
- Test successful agent-to-master registration flow

--- a/payment-network/src/main/resources/application-agent.yaml
+++ b/payment-network/src/main/resources/application-agent.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:file:./data/agent-${AGENT_ID:default}
+    # Removed the spring.datasource section - it's configured programmatically now
     driver-class-name: org.h2.Driver
     username: sa
     password:
