--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,23 @@ Thumbs.db
 *.trace.db
 *.lock.db
 data/
+
+# React build folders
+master-dashboard/build/
+master-dashboard/node_modules/
+agent-interface/build/
+agent-interface/node_modules/
+
+# React misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Claude Code
+.claude/
